fix alignment in RTL

--- a/assets/sass/progressbar.scss
+++ b/assets/sass/progressbar.scss
@@ -13,7 +13,6 @@
         .progress-number {
             display: inline-block;
             width: 98%;
-            text-align: right;
             float: none;
         }
     }
